<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <item
        android:id="@+id/menuItemSettings"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="addMovie"
        app:showAsAction="always"
        >
        <menu>
            <item
                android:id="@+id/addMovieByInternet"
                android:title="@string/addMovieByInternet" />
            <item
                android:id="@+id/addMovieByManual"
                android:title="@string/addMovieByManual" />
        </menu>
    </item>
    <item
        android:icon="@drawable/ic_settings_black_24dp"
        android:id="@+id/groupColors"
        android:title="setting"
        app:showAsAction="always"
        >
        <menu>
            <item
                android:id="@+id/exit"
                android:title="@string/exit" />

            <item
                android:id="@+id/deleteAll"
                android:title="@string/deleteAll" />
        </menu>

    </item>
</menu>