<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.moviemanagment.AddMovie">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@raw/main"
        android:backgroundTint="@color/colorPrimaryDark"
        android:backgroundTintMode="screen">

        <LinearLayout
            android:id="@+id/Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:hint="@string/title"
                android:gravity="center"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="150dp">
            <EditText
                android:id="@+id/descrition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:paddingBottom="120dp"
                android:textSize="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
</ScrollView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/url"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/url"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/button"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ic_label_outline_black_24dp"
                    android:onClick="onShowClick"
                    android:text="@string/show"
                    android:textColor="@color/white" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1"
                app:srcCompat="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/buttons"
                    android:onClick="onClickOk"
                    android:text="@string/ok"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/buttons"
                    android:onClick="onClickCancel"
                    android:text="@string/cancel"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</android.support.constraint.ConstraintLayout>
